Setup kermit for not root dialout capabilities, similar to tip.

--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -1,9 +1,13 @@
 PROG=	kermit
-CFLAGS+= -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -I${.CURDIR}
+CFLAGS+= -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -DSETREUID -I${.CURDIR}
 SRCS=	ckcmai.c ckucmd.c ckuusr.c ckuus2.c ckuus3.c ckuus4.c ckuus5.c \
 	ckuus6.c ckuus7.c ckuusx.c ckuusy.c ckcpro.c ckcfns.c ckcfn2.c \
 	ckcfn3.c ckuxla.c ckucon.c ckutio.c ckufio.c ckudia.c ckuscr.c \
 	ckcnet.c
+
+BINOWN= uucp
+BINGRP= dialer
+BINMODE= 4510
 
 .if !defined(${BINDIR})
 BINDIR=/usr/local/bin
