--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -1,5 +1,6 @@
 PROG=	kermit
-CFLAGS+= -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -I${.CURDIR}
+CFLAGS+= -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -DPIDSTRING \
+	-DLOCK_DIR=\"/var/spool/lock\" -I${.CURDIR}
 SRCS=	ckcmai.c ckucmd.c ckuusr.c ckuus2.c ckuus3.c ckuus4.c ckuus5.c \
 	ckuus6.c ckuus7.c ckuusx.c ckuusy.c ckcpro.c ckcfns.c ckcfn2.c \
 	ckcfn3.c ckuxla.c ckucon.c ckutio.c ckufio.c ckudia.c ckuscr.c \
