--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -1,10 +1,10 @@
 PROG=	kermit
-CFLAGS+= -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -DPIDSTRING \
-	-DLOCK_DIR=\"/var/spool/lock\" -I${.CURDIR}
-SRCS=	ckcmai.c ckucmd.c ckuusr.c ckuus2.c ckuus3.c ckuus4.c ckuus5.c \
-	ckuus6.c ckuus7.c ckuusx.c ckuusy.c ckcpro.c ckcfns.c ckcfn2.c \
-	ckcfn3.c ckuxla.c ckucon.c ckutio.c ckufio.c ckudia.c ckuscr.c \
-	ckcnet.c
+CFLAGS+= -I${.CURDIR} -DBSD44 -DCK_CURSES -DDYNAMIC -DTCPSOCKET -DPIDSTRING \
+	-DLOCK_DIR=\"/var/spool/lock\"
+SRCS=   ckcmai.c ckucmd.c ckuusr.c ckuus2.c ckuus3.c ckuus4.c ckuus5.c \
+        ckuus6.c ckuus7.c ckuusx.c ckuusy.c ckcpro.c ckcfns.c ckcfn2.c \
+        ckcfn3.c ckuxla.c ckucon.c ckutio.c ckufio.c ckudia.c ckuscr.c \
+        ckcnet.c
 
 # uncomment these for uucp setuid dialout 
 #CFLAGS+= -DSETREUID
@@ -19,18 +19,21 @@ BINDIR=/usr/local/bin
 MANDIR=/usr/local/man/man
 .endif
 
-DPADD=	${LIBCURSES} ${LIBTERM}
-LDADD=	-lcurses -ltermcap
-CLEANFILES= ckcpro.c wart
+DPADD=  ${LIBCURSES} ${LIBTERM}
+LDADD=  -lcurses -ltermcap
 
-.if exists(${.CURDIR}/obj)
-OBJ=obj
-.else
-OBJ=.
-.endif
+.SUFFIXES: .w
 
-ckcpro.c: ckcpro.w  
-	${CC} ${CFLAGS} -o ${.CURDIR}/${OBJ}/wart ${.CURDIR}/ckwart.c
-	${.CURDIR}/${OBJ}/wart ${.CURDIR}/ckcpro.w ${.TARGET}
+.w.c:
+	./wart ${.IMPSRC} ${.TARGET}
+
+wart: ckwart.c
+	$(CC) -o wart ${.CURDIR}/ckwart.c
+
+
+ckcpro.c: ckcpro.w
+ckcpro.c: wart
+
+CLEANFILES+= ckcpro.c wart
 
 .include <bsd.prog.mk>
