Modified Makefile.in so that infodir points to /usr/gnu/info, rather than /usr/local/info.

--- a/print/texinfo/info/Makefile.in
+++ b/print/texinfo/info/Makefile.in
@@ -49,6 +49,7 @@ CFLAGS = -g
 LDFLAGS = -g
 
 prefix = /usr/local
+infoprefix = /usr/gnu
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
 # Prefix for each installed program, normally empty or `g'.
@@ -58,7 +59,7 @@ libdir = $(prefix)/lib
 manprefix = 
 mandir = $(prefix)/man/man1
 manext = 1
-infodir = $(prefix)/info
+infodir = $(infoprefix)/info
 
 #### End of system configuration section. ####
 
