--- a/print/texinfo/Makefile.in
+++ b/print/texinfo/Makefile.in
@@ -45,6 +45,7 @@ CFLAGS = -g
 LDFLAGS = -g
 
 prefix = /usr/local
+infoprefix = /usr/gnu
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
 # Prefix for each installed program, normally empty or `g'.
@@ -54,7 +55,7 @@ libdir = $(prefix)/lib
 manprefix = 
 mandir = $(prefix)/man/man1
 manext = 1
-infodir = $(prefix)/info
+infodir = $(infoprefix)/info
 
 # For info program. 
 DEFAULT_INFOPATH = $(infodir):.
