*BSD fixes for it to compile

--- a/util/screen/osdef.h.in
+++ b/util/screen/osdef.h.in
@@ -18,7 +18,7 @@
  * Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  ****************************************************************
- * $Id: osdef.h.in,v 1.1 1993/08/15 18:32:54 nate Exp $ FAU
+ * $Id: osdef.h.in,v 1.2 1993/08/15 19:22:22 nate Exp $ FAU
  */
 
 /****************************************************************
@@ -156,6 +156,8 @@ extern void  unsetenv __P((char *));
 
 # if defined(GETTTYENT) && !defined(GETUTENT) && !defined(UTNOKEEP)
 struct ttyent;
+#ifndef __386BSD__
 extern void  setttyent __P((void));
+#endif
 extern struct ttyent *getttyent __P((void));
 # endif
