Added install directives in Makefile, and added notes on virutal memory usage in the Tiff library.

--- a/x11/xv/Makefile
+++ b/x11/xv/Makefile
@@ -238,6 +238,9 @@ vdcomp: vdcomp.c
 xcmap:  xcmap.c
 	$(CC) $(CFLAGS) -o xcmap xcmap.c $(LIBS)
 
+install: xv bggen vdcomp xcmap
+	install -c -s xv bggen vdcomp xcmap /usr/X386/bin
+
 xvclean:
 	rm -f $(OBJS) xv
 	
