changed prefix from /usr/local to /usr/gnu

--- a/print/texinfo/Makefile.in
+++ b/print/texinfo/Makefile.in
@@ -44,8 +44,7 @@ SHELL = /bin/sh
 CFLAGS = -g
 LDFLAGS = -g
 
-prefix = /usr/local
-infoprefix = /usr/gnu
+prefix = /usr/gnu
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
 # Prefix for each installed program, normally empty or `g'.
@@ -55,7 +54,7 @@ libdir = $(prefix)/lib
 manprefix = 
 mandir = $(prefix)/man/man1
 manext = 1
-infodir = $(infoprefix)/info
+infodir = $(prefix)/info
 
 # For info program. 
 DEFAULT_INFOPATH = $(infodir):.
