added DBZ data base from C News

--- a/news/nntp/Makefile
+++ b/news/nntp/Makefile
@@ -1,16 +1,16 @@
 #
 # Makefile for NNTP intstallation
-# $Header: /a/cvs/386BSD/ports/news/nntp/Makefile,v 1.1 1993/07/19 20:04:26 nate Exp $
+# $Header: /a/cvs/386BSD/ports/news/nntp/Makefile,v 1.2 1993/08/22 00:35:57 alm Exp $
 # The program that knows how to deal with makefiles. [Uncomment if needed.]
 # MAKE=make
 # set CFLAGS to be -Ipath/to/special/includes if needed
-CFLAGS= -O -traditional
-# set LIBS to be -lneededlibrary if needed
-LIBS=
+CFLAGS= -O -I../dbz
+# link with DBZ
+LIBS=../dbz/dbz.o
 
 DISTFILES = Makefile README CHANGES
 
-DISTDIRS = common doc inews server support xfer xmit
+DISTDIRS = common doc dbz inews server support xfer xmit
 
 DIST = $(DISTFILES) $(DISTDIRS)
 
@@ -30,6 +30,7 @@ make_:
 	@ echo "See README for details."
 
 make_server: /nowhere
+	cd dbz; $(MAKE)  it
 	cd server; $(MAKE) $(MFLAGS) "LIBS=${LIBS}" "CFLAGS=${CFLAGS}"
 	cd support; $(MAKE) $(MFLAGS) "LIBS=${LIBS}" "CFLAGS=${CFLAGS}"
 	cd doc; $(MAKE) $(MFLAGS) "LIBS=${LIBS}" "CFLAGS=${CFLAGS}"
