lex.o built from lex.c instead of lex.l

--- a/x11/xview/xview/clients/ftptool/Makefile
+++ b/x11/xview/xview/clients/ftptool/Makefile
@@ -313,7 +313,7 @@ INFOFILES = ftptool.info
 
 MANPAGES = ftptool.man
 
-SRCS = batch.c button_funcs.c change_dir.c create_main.c create_other.c 	dircache.c dirlist.c dofuncs.c dnd.c event.c ftp.c host_list.c 	lex.l main.c menu_funcs.c misc.c readdir.c schedule.c tar_view.c 	transfer.c view_file.c
+SRCS = batch.c button_funcs.c change_dir.c create_main.c create_other.c 	dircache.c dirlist.c dofuncs.c dnd.c event.c ftp.c host_list.c 	lex.c main.c menu_funcs.c misc.c readdir.c schedule.c tar_view.c 	transfer.c view_file.c
 
 OBJS = batch.o button_funcs.o change_dir.o create_main.o create_other.o 	dircache.o dirlist.o dofuncs.o dnd.o event.o ftp.o host_list.o 	lex.o main.o menu_funcs.o misc.o readdir.o schedule.o tar_view.o 	transfer.o view_file.o
 
