--- a/mail/elm/doc/Makefile
+++ b/mail/elm/doc/Makefile
@@ -1,13 +1,17 @@
 #
-# : Makefile.SH,v 5.11 1993/04/12 02:12:07 syd Exp $
+# : Makefile.SH,v 1.1.1.1 1993/08/14 22:36:14 smace Exp $
 #
 #  Makefile for the documentation of the ELM mail system
 #
 #         (C) Copyright 1988-1992, USENET Community Trust
 #
 #  $Log: Makefile,v $
-#  Revision 1.1  1993/08/14 22:36:15  smace
-#  Initial revision
+#  Revision 1.2  1993/08/24 23:06:05  smace
+#  Mime support not compiled in under default installation: elm get funky
+#  when you say metamail exist but it does not...
+#
+# Revision 1.1.1.1  1993/08/14  22:36:14  smace
+# elm: 	elm-2.4pl23beta -- mail reader
 #
 # Revision 5.11  1993/04/12  02:12:07  syd
 # Added elmalias.1 man page.  Updated Users.guide to mention elmalias.
