--- a/mail/elm/src/Makefile
+++ b/mail/elm/src/Makefile
@@ -1,4 +1,4 @@
-# : Makefile.SH,v 5.1 1992/10/03 22:58:40 syd Exp $
+# : Makefile.SH,v 1.1.1.1 1993/08/14 22:36:26 smace Exp $
 #
 #  Makefile for the ELM mail program.
 #
@@ -11,8 +11,12 @@
 #			dsinc!elm
 #
 # $Log: Makefile,v $
-# Revision 1.1  1993/08/14 22:36:32  smace
-# Initial revision
+# Revision 1.2  1993/08/24 23:06:25  smace
+# Mime support not compiled in under default installation: elm get funky
+# when you say metamail exist but it does not...
+#
+# Revision 1.1.1.1  1993/08/14  22:36:26  smace
+# elm: 	elm-2.4pl23beta -- mail reader
 #
 # Revision 5.1  1992/10/03  22:58:40  syd
 # Initial checkin as of 2.4 Release at PL0
