deleted the HAVE_BISON definition, so that yacc is used instead. Added to the call of cpp the traditional flag, so that the expansion is now correct again.

--- a/shell/bash/Makefile
+++ b/shell/bash/Makefile
@@ -19,7 +19,7 @@ GAWK     = awk
 
 #CPPNAME = /lib/cpp
 #CPP     = $(CPPNAME) `$(CPPMAGIC) $(GETCPPSYMS) $(CPPNAME)` -P
-CPP     = $(CC) -E
+CPP     = $(CC) -traditional -E
 
 CPP_MAKEFILE = cpp-Makefile
 
